--- a/acssets/css/main.css
+++ b/acssets/css/main.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
 }
 
-ul {
+ul{
     list-style: none;
     padding: 0;
     border: 0;
@@ -14,16 +14,13 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 15px 60px;
+    position: absolute;
+/*    vi tri tren cung*/
+    width: 100%;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
 }
-
-header ul {
-    display: flex;
-}
-
-header li {
-    padding-left: 20px;
-}
-
 #page-logo a {
     padding: 10px;
     font-family: "Quicksand", sans-serif;
@@ -33,3 +30,48 @@ header li {
     text-transform: uppercase;
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
+
+header ul {
+    display: flex;
+}
+
+header li {
+    margin-left: 20px;
+}
+
+header a{
+    color: rgb(255,251,0);
+    text-decoration: none;
+    font-size: 20px;
+    padding: 12px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    border-radius: 6px;
+}
+header a:hover{
+    color: rgb(77,77,77);
+    background-color: rgb(255,251,0);
+}
+
+footer{
+    background: linear-gradient(70deg,rgb(24,24,24),rgb(25,29,29));
+    padding: 36px 0;
+}
+footer ul{
+    display: flex;
+    justify-content: center;
+}
+footer li{
+    width: 80px;
+    height: 80px;
+    margin: 0 50px;
+}
+footer img{
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
