--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,32 @@ html {
 header {
     height: 46px;
     background-color: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+}
+
+header .search-btn {
+    float: right;
+    padding: 0 21px;
+
+}
+
+header .search-btn:hover {
+    background-color: #f44336;
+    cursor: pointer;
+}
+
+header .search-icon {
+    color: white;
+    font-size: 20px;
+    line-height: 46px;
+}
+
+nav {
+    display: inline-block;
 }
 
 #nav, .subnav {
@@ -73,9 +99,39 @@ header {
     line-height: 38px;
 }
 
+#nav .nav-dow {
+    font-size: 14px;
+}
+
 #slider {
-    min-height: 500px;
-    background-color: gray;
+    margin-top: 46px;
+    padding-top: 50%;
+    /*    50% cua chieu rong*/
+    background: url('/assets/img/slider/chicago.jpg') top center/cover no-repeat;
+    position: relative;
+}
+
+.text-content {
+    position: absolute;
+    bottom: 48px;
+    color: white;
+    text-align: center;
+    /*left: 50%;*/
+    /*transform: translateX(-50%);*/
+    width: 100%;
+    /*right: 0;*/
+    /*left: 0;*/
+}
+
+#slider .text-header {
+    font-weight: 500;
+    font-size: 24px;
+
+}
+
+#slider .text-description {
+    font-size: 15px;
+    margin-top: 25px;
 }
 
 #content {
