responsive mobile and fix UX

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,10 @@
     margin-top: 16px !important;
 }
 
+.mt-32 {
+    margin-top: 32px !important;
+}
+
 .row {
     margin-left: -8px;
     margin-right: -8px;
@@ -66,7 +70,7 @@
     display: inline-block;
     margin-top: 15px;
     border: none;
-
+    text-align: center;
 }
 
 .btn:hover {
@@ -140,11 +144,13 @@ header .search-icon {
 
 nav {
     display: inline-block;
+    padding: 0;
+    margin: 0;
 }
 
 #nav, .subnav {
     list-style-type: none;
-
+    position: relative;
 }
 
 #nav > li {
@@ -157,9 +163,11 @@ nav {
 
 }
 
-#nav li:hover .subnav {
+#nav li:hover .subnav,
+#nav li:hover > ul.subnav {
     display: block;
 }
+
 
 #nav > li > a {
     color: #ffffff;
@@ -276,7 +284,7 @@ nav {
 }
 
 #content .member-list {
-    margin-top: 48px;
+    margin-top: 32px;
     /*overflow: hidden;*/
 }
 
@@ -339,7 +347,7 @@ nav {
 /*place*/
 .places-list {
     /*margin: 32px -8px 0;*/
-    margin-top: 32px;
+    margin-top: 16px;
 
 }
 
@@ -495,6 +503,15 @@ nav {
 .contact-info {
     font-size: 18px;
     line-height: 1.5;
+}
+
+.contact-info a {
+    color: #101aef;
+    opacity: 0.8;
+}
+
+.contact-info a:hover {
+    opacity: 1;
 }
 
 .contact-info i[class*="ti-"] {
